--- a/App.Api/appsettings.json
+++ b/App.Api/appsettings.json
@@ -12,6 +12,13 @@
     "Key": "ilhanrandakk@gmail.com05355865315ilhanrandadenizrandailkerranda",
     "Issuer": "https://localhost:44344",
     "Audience": "https://localhost:44344"
+  },
+  "MailSettings": {
+    "DisplayName": "Ataapt",
+    "From": "ataapartmanii@gmail.com",
+    "Password": "xpthxdxrmxvjcpim",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 
 }
