--- a/App.Web/appsettings.Development.json
+++ b/App.Web/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "DisplayName": "Ataapt",
+    "From": "ataapartmanii@gmail.com",
+    "Password": "xpthxdxrmxvjcpim",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
